# auxima-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
auxima_ai/: __init__.py  auth.py  auth_nonce.py  auth_select.py  auth_v1.py  auth_v1_middleware.py  auth_whoami.py  bootstrap.py  config.py  key_leak_scan.py  main.py
auxima_ai/activity/: __init__.py  http_emitter.py  row.py  tombstone.py
auxima_ai/assist/: fallback.py  nvidia_dev.py  openrouter.py  prompts.py  router.py  schema.py  service.py
auxima_ai/claims/: intake.py  intake_extract.py  intake_router.py  intake_schema.py  prompts.py  reserve.py  router.py  schema.py  service.py  subcrew.py
auxima_ai/cost/: __init__.py  ledger.py  pricing.py
auxima_ai/idempotency/: __init__.py  store.py
auxima_ai/ids/: __init__.py  ulid.py
auxima_ai/intake/: __init__.py  confidence.py  delimit.py  doc_class.py  llm.py  ocr_tesseract.py  ollama.py  pdf_text.py  prompts.py  quote_prompt.py  quote_router.py  quote_schema.py  quote_service.py  router.py  schema.py  service.py
auxima_ai/nphies/: __init__.py  builder.py
auxima_ai/observability/: __init__.py  log.py  metrics.py  redact.py  trace.py
auxima_ai/policy/: __init__.py  enforcer.py  loader.py
auxima_ai/ratelimit/: __init__.py  bucket.py
auxima_ai/resilience/: __init__.py  circuit.py
auxima_ai/tokens/: __init__.py  estimator.py
auxima_ai/util/: __init__.py  email.py  iban.py  ksa_id.py  phone.py
auxima_ai/webhooks/: __init__.py  delivery.py  dlq.py  retry.py  signer.py  url_guard.py
scripts/: README-dev-nvidia.md  dev_nvidia.py  dev_serve_nvidia.py
tests/: test_activity_http_emitter.py  test_activity_row.py  test_activity_tombstone.py  test_assist_bootstrap.py  test_assist_dn_summary.py  test_assist_draft_email.py  test_assist_draft_note.py  test_assist_draft_reply.py  test_assist_fallback.py  test_assist_h2_gate.py  test_assist_intent_classify.py  test_assist_local_only.py  test_assist_openrouter.py  test_assist_policy_gate.py  test_assist_policy_ingest.py  test_assist_prompts.py  test_assist_recommendation.py  test_assist_redaction.py  test_assist_renewal_draft.py  test_assist_sov_extract.py  test_assist_suggest_fields.py  test_assist_wording_diff.py  test_auth_log_hygiene.py  test_auth_nonce.py  test_auth_nonce_redis.py  test_auth_nonce_redis_integration.py  test_auth_select.py  test_auth_v1.py  test_auth_v1_audit.py  test_auth_v1_middleware.py  test_auth_whoami.py  test_bootstrap.py  test_circuit.py  test_claims_crew.py  test_claims_intake.py  test_claims_intake_extract.py  test_claims_intake_router.py  test_claims_router.py  test_claims_subcrew.py  test_config.py  (+45 more)
