[project]
name = "auxima-ai"
version = "0.1.0"
description = "Auxima Insure AI sidecar — FastAPI service for the multi-agent CRM. Communicates with the Frappe `auxima` app over REST only. NEVER imports frappe."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Auxilium Tech" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    # P1-10 quote intake: native PDF text extraction. BSD-3, pure-Python, no
    # system binary (license-hygiene clean). Lazy-imported in pdf_text.py, so a
    # deployment without it fails loudly at call time, not at import.
    "pypdf>=4.0",
    # P2-09 scanned-PDF OCR: pypdfium2 rasterises pages (Apache-2.0/BSD), pytesseract
    # shells out to the Tesseract binary (Apache-2.0 wrapper; binary is Apache-2.0).
    # Both lazy-imported in ocr_tesseract.py — a deployment without the Tesseract
    # binary self-reports OCR unavailable (scanned PDFs → Failed), never crashes.
    "pypdfium2>=4.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    # redis-py is a deploy-time / test-time dependency only — the sidecar code
    # never imports it at runtime (RedisNonceStore is duck-typed). Needed for the
    # real-Redis integration drills (test_auth_nonce_redis_integration.py); those
    # tests SKIP when no server is reachable, so this install alone is harmless.
    "redis>=5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["auxima_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
